# ex_1

./: CMakeLists.txt  README.md
include/: solution.h
src/: main.cpp  solution.cpp
